syntax = "proto3";
package pixiu.api.v1;

// RouteAction match route should do
message RouteAction {
	string cluster = 1;
	int64 cluster_not_found_response_code = 2;
}

// RouteConfiguration
message RouteConfiguration {
	repeated pixiu.api.v1.Router routes = 1;
	bool dynamic = 2;
}

message Router {
	string id = 1 ;
	pixiu.api.v1.RouterMatch match = 2;
	pixiu.api.v1.RouteAction route = 3;
}

// RouterMatch
message RouterMatch {
	string prefix = 1;
	string path = 2;
	repeated string methods = 3;
}